intear-dex-management/tests/snapshots/dex_lifecycle__xyk_migrate_by_account_other_than_slimedragon.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"migrate\", \"alice.near\"]).await"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test migrate alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test migrate alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: alice.near can't migrate xyk dexes; only slimedragon.near can

Suggestion: Sign with slimedragon.near
