intear-dex-management/tests/snapshots/dex_lifecycle__xyk_migrate_when_state_is_current.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"migrate\",\n\"slimedragon.near\"]).await"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test migrate slimedragon.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test migrate slimedragon.near network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: The code of slimedragon.near/xyk-test already reads its state, so there's nothing to migrate
