intear-dex-management/tests/snapshots/dex_lifecycle__xyk_pools_count_after_failed_migration.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.view(&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"pools\", \"count\"])"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test pools count network-config sandbox now
exit code: 0
--- stdout ---
0
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test pools count network-config sandbox now
