intear-dex-management/tests/snapshots/dex_lifecycle__xyk_pools_count_of_state_before_migration.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.view(&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"pools\", \"count\"])"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test pools count network-config sandbox now
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test pools count network-config sandbox now

Error:
   0: dex.intear.near failed in dex_view on network sandbox: Failed to call function 'get_pool_count': [slimedragon.near/xyk-test] Dex panicked: Cannot deserialize the contract state.

Suggestion: The dex's code can't read its state; deploying code that converts it with `xyk deploy … --migrate` fixes that
